Correctly center content and add spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,5 @@
 body {
     background-color: lightblue;
-    width: 700px;
-    margin: 0 auto;
     font-family: Roboto, sans-serif;
 }
 
@@ -54,8 +52,7 @@ h1 {
     text-align: center;
     font-size: 40px;
     width: 500px;
-    height: 150px;
-    margin: 0 auto;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -72,7 +69,8 @@ h1 {
 .content {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
 .scoreboard {
@@ -89,9 +87,9 @@ h1 {
 }
 
 .play-again {
+    margin-top: 30px;
     width: 200px;
     padding: 20px 40px;
-    margin: 0 auto;
     background-color: lightskyblue;
     border: none;
     font-size: 24px;
@@ -103,8 +101,9 @@ h1 {
 
 .choices {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
+    gap: 60px;
 }
 
 .choices span {
